--- a/emacs/.config/emacs/README.org
+++ b/emacs/.config/emacs/README.org
@@ -58,8 +58,8 @@
     (global-prettify-symbols-mode)
     (global-auto-revert-mode)
     (load-theme 'modus-vivendi-tritanopia)
-    (add-to-list 'default-frame-alist
-                '(font . "Hack Nerd Font Mono-10"))
+    ;; (add-to-list 'default-frame-alist
+                ;; '(font . "Hack Nerd Font Mono-10"))
     ;; speed
      (defun start/display-startup-time ()
        (message "Emacs loaded in %s with %d garbage collections."
@@ -410,7 +410,7 @@ efficient functions call instead of lambdas
             ([?\s-o] . guix-packages-by-name)
             ([?\s-p] . app-launcher-run-app)
             ([?\s-f] . find-file)
-            ([?\s-d] . dired-jump)
+            ([?\s-d] . diary)
             ([?\s-a] . org-agenda)
             ([?\s-m] . newsticker-show-news)
             ([?\s-y] . org-store-link)
